# edgedetection

./: CMakeLists.txt  featuredetection.cpp  new.txt  test.txt
